<resources>
    <string name="app_name">追书神器</string>
    <string name="bookshelf_title">追书</string>
    <string name="community_title">社区</string>
    <string name="discover_title">发现</string>
    <string-array name="main_tab_text_arr">
        <item>追书</item>
        <item>社区</item>
        <item>发现</item>
    </string-array>
    <string name="str_gender_tip1">我们会根据您的喜好</string>
    <string name="str_gender_tip2">推荐相对应的小说</string>
    <string name="str_gender_tip3">-请选择您的喜好-</string>
    <string name="str_gender_male_button">男生小说</string>
    <string name="str_gender_female_button">女生小说</string>
    <string name="str_bookshelf_add_tip">添加你喜爱的小说</string>
    <string name="str_bookshelf_add_btn">＋去添加</string>
    <string name="str_discover_rank">排行榜</string>
    <string name="str_discover_theme_book_list">主题书单</string>
    <string name="str_discover_catogory">分类</string>
    <string name="str_discover_audio_book">有声小说</string>
    <string name="str_rank_male">男生</string>
    <string name="str_rank_female">女生</string>
    <string name="str_rank_top_100">追书最热榜 Top100</string>
    <string name="str_rank_haoping">好评榜</string>
    <string name="str_rank_resou">热搜榜</string>
    <string name="str_rank_qianli">本周潜力榜</string>
    <string name="str_rank_liucun">读者留存率 Top100</string>
    <string name="str_rank_wanjie">追书完结榜 Top100</string>
    <string name="str_rank_vip">VIP排行榜</string>
    <string name="str_rank_others">别人家的排行榜</string>
    <string-array name="array_rank_detail">
        <item>周榜</item>
        <item>月榜</item>
        <item>总榜</item>
    </string-array>
    <string name="str_rank_detail_author">&#160;&#160;|&#160;&#160;</string>
    <string name="str_rank_detail_chase">&#160;&#160;人在追</string>
    <string name="str_rank_detail_save">%&#160;&#160;读者留存</string>
    <string name="str_rank_detail_no_content">无内容</string>
    <string name="str_community_discuss">综合讨论区</string>
    <string name="str_community_comment">书评区</string>
    <string name="str_community_helper">书荒互助区</string>
    <string name="str_community_girl">女生区</string>
    <string name="str_community_original">原创区</string>
    <string name="str_community_title">公共讨论区</string>
    <string name="str_read_content_test">\u3000\u3000江州，天下十九州之一，临近东海，境内多湖泊。\n\u3000\u3000江州境内，广凌郡城。\n\u3000\u3000广凌郡城西城的景楼大街上，行人如织，繁华热闹。\n\u3000\u3000“六年了。”一位布衣青年腰间挂着一柄剑，牵着马行走在街道上，“终于回来了，在外面待久了，还是觉得家乡好。”\n\u3000\u3000哒！哒！哒！\n\u3000\u3000马蹄声儿急，远处正有一华衣少年骑着一高头大马在繁华街道上飞奔，一时间街道上行人们连忙避让开来，那骑马少年后面还有着仆人护卫骑马在后面追着：“公子，慢点，慢点。”\n\u3000\u3000布衣青年看到这幕，牵着马朝旁边避让了下，目视那华衣少年骑马而过。\n\u3000\u3000“哪家的小子，也对，我离家六年了，六年前，这小家伙怕才七八岁吧。”布衣青年笑了笑，又继续前进。\n\u3000\u3000看着熟悉的家乡，甚至还有些认识的摊贩。\n\u3000\u3000“六年了，当初离家时我才十五岁，现在的我和当初相比，变化太大了。”布衣青年感慨。\n\u3000\u3000十五岁时，意气风发，锋芒毕露！\n\u3000\u3000被誉为广凌郡年轻一代第一人。\n然而离家游历天下，六年下来，他才觉得当初的自己多么的稚嫩。\n……\n一路行走，看着熟悉的店铺酒楼，熟悉的河道石桥。\n终于，牵着马，来到了一座府邸外。\n近乡情更怯，布衣青年牵着马，深吸一口气才上前，咚咚咚，敲响了大门。\n吱呀。\n大门打开一条缝，一老头朝外探出身子看了眼，跟着就瞪大眼睛：“二公子！”眼前的青年一身布衣，普普通通，可他是看着二公子‘秦云’长大的，一眼就认出来了。\n“李伯。”秦云笑着道。\n“二公子回来了，二公子回来了！”李老头激动的高喊，声音响彻整个府邸，他连轰隆隆拉开整个府门大门。\n“给我给我，我来牵马。”李老头连接过马缰绳。\n“云儿，云儿。”整个府邸内一片喧哗，一位穿着华贵的中年妇人飞奔出来，身后更有数个丫鬟连跟着，一看到府门处的秦云，中年妇人激动的泪水都禁不住。\n“娘。”\n秦云也是眼睛一酸，连跑过去。\n中年妇人仔细看着自己儿子，摸着儿子的胳膊、脸庞：“好，好，回来就好，回来就好，嗯，长高了。”\n“二公子，夫人她都不知道为你流了多少眼泪，每日都在菩萨前为你念经祈福。”一旁的女管事连道。\n“是儿不孝，如今才回来。”秦云也看着母亲，母亲的头上也多了些白发，眼角的皱纹也多了，不由心中一疼，不知不觉，母亲也近五十岁了。\n“都不说了，回来就好。”母亲眼中虽含泪，却是喜悦泪水，连吩咐，“快快，赶紧去告知老爷，还有大公子。”\n“是。”\n女管事立即去安排。\n……\n整个秦府一片喜庆，很快秦府主人‘秦烈虎’回来了。\n“老爷。”\n“老爷。”府邸内的仆人丫鬟们都连恭敬行礼，只是他们个个眉宇间都是喜色，二公子回来，仆人丫鬟们也都开心的很。\n独臂男子微微点头，他双眸如电，腰间有一柄单刀，散发的无形威压都让那些仆人丫鬟们恭恭敬敬，他便是这秦府的主人‘秦烈虎’，也是广凌郡城的三大银章捕头之一。\n“爹。”秦云和母亲常兰出来迎接。\n“云儿。”独臂男子‘秦烈虎’看到自己的儿子，也不由眼睛一热，有些湿润。\n儿行千里母担忧，父亲虽然嘴上不说，可心中同样时刻牵挂担心。虽然知道为了儿子的前程，就该放儿子出去闯荡，可还是牵肠挂肚。\n他怕，怕儿子一去不回。\n因为这天下广阔，深山大泽更多有妖怪潜藏，在外闯荡也充满艰险。\n“回来就好，回来就好。”秦烈虎看着自己儿子，和当初锋芒毕露相比，如今儿子明显成熟了，气息也收敛。\n“突破了？”秦烈虎问一句，他很清楚自己儿子修炼是传说中的修仙法门，要修行有成是何等之难。\n“两年半前突破的。”秦云微笑说道。\n秦烈虎眼睛一亮，这一突破当真是鱼跃龙门。\n“好好好，我秦烈虎有一个了不得的儿子。”秦烈虎激动万分，此事牵扯甚大，他甚至都没敢和妻子常兰说。\n“你们父子俩就不能进屋坐下说？”母亲常兰则道。\n“先进去，先进去坐。”秦烈虎也连道。\n……\n陪父亲母亲聊了片刻，便听到外面传来声音。\n“二弟，二弟，二弟！”老远便传来喊声，声音中满是喜悦。\n“哥。”秦云也起身，“爹娘，我去迎迎。”\n“去吧去吧，你和你哥也六年没见了。”母亲常兰笑道。\n秦云则连起身走出厅外迎去，很快看到远处走来的一大家人，一位锦袍青年带着一位美娇妻，带着一男一女两个孩童。\n“二弟。”锦袍青年看到秦云，不由激动连跑过来，一把就抱住。\n“哥。”秦云也抱着兄长。\n他和大哥感情极好，秦家还在微末之时，他俩小时候都是在村里长大，更经过大磨难，自己当时年龄还小些，大哥当初却已经是少年，处处照顾着自己。\n“你这小子，你一去就是六年！走之前你不说了，就三年么？突然来信，说还要在外三年？”锦袍青年忍不住道，“三年又三年，你真是，让一家人都为你担心。”\n“都是我的错。”秦云连道，“见过嫂子！哥，这两个小家伙就是你信里说的‘舒彦’和‘舒冰’吧？乖侄儿，乖侄女，长的真俊。”说着还捏了捏两个孩童的小脸，惹得这两个小孩吓得抱住父母的大腿。\n“你们俩还不赶紧拜见叔父，别怕，怕什么，这是你们叔父，快叫。”锦袍青年连道。\n“叔父。”\n两孩子都约莫三四岁，还有些懵懵懂懂。\n“好好，我这有两块护身符，可贴身携带，都收好。”早有准备的秦云从怀中拿出两锦囊，从中取出两块玉符，玉符通体暖白，上还有复杂符纹雕刻，看了就情不自禁觉得心静舒服。\n锦袍青年‘秦安’眼光也不一般，一看就猜出这两块玉符不一般：“二弟，太贵重了。”\n“贴身带着，对小孩好。”秦云说道。\n……\n当天中午，秦家一大家人聚在一起吃着午饭，午饭很丰盛，丫鬟们也很开心的端着一盘盘菜送上来，秦府对下人们还是很仁慈宽厚的。\n秦云很开心和父母、哥哥一家人在一起，这种幸福团圆感是他很享受的。\n“大人，大人。”\n午饭过后，有一位捕头来到厅外高声喊道。\n厅内的众人一听。\n“今日云儿回来，就不能歇息一日？”夫人常兰有些不满道。\n“夫人，我且先去问问。”秦烈虎则连道，立即起身朝外走去。\n外面的捕头壮汉身高八尺，虎背熊腰，手持着一根粗壮大铁棍，目测也有上百斤重，怕是挥舞起来轻易都能轰碎一堵墙，他此刻却是乖乖在外面候着。\n“老徐，什么事？”秦烈虎走到近前，才压低声音问道。今日他早就吩咐了，没大事就别来打扰他了，毕竟离家六年的儿子刚回来。\n“大人，我也不想来打扰大人，可郡守大人亲自吩咐，让你务必过去，有重要之事，恐怕这一两天都没法回家。”徐捕头连道。\n“郡守大人？一两天？”秦烈虎眉头一皱。\n郡守，整个广凌郡军政大权于一身，因为有妖魔祸乱一方，郡守大人紧急情况下更有七品以下先斩后奏之权。在广凌郡也没谁敢挑衅郡守大人之权威。\n秦烈虎连回了厅内。\n“郡守大人有事吩咐我过去，怕这一两天都要在外了。”秦烈虎披上外衣，将一旁的单刀挂在腰间。\n“小心点。”夫人常兰连嘱托道。\n“我去送送爹。”秦云则连起身。\n“送什么送，你回去好好陪你娘他们。”秦烈虎和自己儿子一边朝外走，一边说道。\n“二公子，六年没见了，怪想二公子的。”一旁的徐捕头则笑呵呵道。\n“徐叔，你这风火棍都大了一圈，看来实力大进啊。”秦云说道。\n“不值一提，不值一提。”徐捕头连道。\n在十五岁时就成为广凌郡城年青一代第一人的秦云面前，徐捕头自然谦逊。\n“爹，一两天不能回来，有什么大事吗？需要我帮忙吗？”秦云询问道。\n秦烈虎瞥了眼自己儿子，笑道：“放心吧，在广凌郡城内，官府才是最强的！”\n“嗯。”秦云点头。\n送父亲到府门口。\n门外早有准备好了马，父亲和徐捕头分别骑马飞奔而去。\n秦云看着父亲离去，却调动体内的真元开始施展法术。\n“法眼，开！”\n秦云的双眸瞳孔深处，却是有法纹凝结。表面看不出任何变化，可在秦云的双眸中，天地却变了！\n原本还是下午时分，太阳高悬，可此刻在秦云的双眸观看下，天空则是弥漫着无尽的青色气息，远处骏马上的父亲‘秦烈虎’身上有着少许诡异的气息缠绕，有淡粉色气息、深绿色气息、血红色气息……足足六种气息，可每一种都很微弱，怕随着时间都会最终消散。\n“父亲身为三大银章捕头之一，偶尔接触到妖怪，沾染上些许妖气也很正常。”秦云心中也轻松，这些妖气都只是沾染体表，未曾渗透身体内部，并无任何隐患。\n秦云转头朝府内走去。\n他法眼维持着，观看下，人类散发着人的气息，花草树木也有各自气息，万物生灵皆有各自气息，气息强弱不一，在法眼下一切无所遁形。\n当然在自家府内论生命气息，不算自己，父亲当为第一！这些丫鬟仆人的生命气息就相对弱多了。\n“云儿，来来来，别管你爹了，你爹经常要办差。”厅内母亲常兰催促道。\n秦云朝厅内看去。\n法眼观看下，厅内个个气息显现。\n母亲、嫂子包括侄儿侄女的气息都很正常，只是自己大哥的气息……\n“嗯？”秦云心中一惊。\n只见一身锦袍的大哥‘秦安’气息却比较虚弱，并且还有一股浓郁的邪恶的绿色气息渗透进秦安体内，并且和秦安的生命气息完全交缠在一起。\n“妖气！好浓的妖气，已经深入肌理脏腑。和我哥的纠缠绝非一次两次，我哥的生命气息都很虚弱，再这么下去就掩饰不住，会直接病重身死了！”秦云心都在颤抖，满腔怒意和杀机，“到底是谁，对我哥下如此毒手？”\n秦云心中又惊又怒，又后怕！\n因为若是自己晚回来半年，恐怕就再也见不到大哥了。</string>
    <string name="str_read_chapter_test">第1章 归来</string>
    <string name="str_read_time_test">13:31</string>
    <string name="str_community_top_all">全部</string>
    <string name="str_community_top_distillate">精品</string>
    <string name="str_community_top_default">默认排序</string>
    <string name="str_community_top_new">最新发布</string>
    <string name="str_community_top_most_comment">最多评论</string>
    <string-array name="str_arr_community_left">
        <item>全部</item>
        <item>精品</item>
    </string-array>
    <string-array name="str_arr_community_right">
        <item>默认排序</item>
        <item>最新发布</item>
        <item>最多评论</item>
    </string-array>
    <string name="str_comment_top_left_title">全部</string>
    <string name="str_comment_top_middle_title">全部类型</string>
    <string name="str_comment_top_right_title">默认排序</string>
    <string-array name="str_arr_comment_top_left">
        <item>全部</item>
        <item>精品</item>
    </string-array>
    <string-array name="str_arr_comment_top_middle">
        <item>全部类型</item>
        <item>玄幻奇幻</item>
        <item>武侠仙侠</item>
        <item>都市异能</item>
        <item>历史军事</item>
        <item>游戏竞技</item>
        <item>科幻灵异</item>
        <item>穿越架空</item>
        <item>豪门总裁</item>
        <item>现代言情</item>
        <item>古代言情</item>
        <item>幻想言情</item>
        <item>耽美同人</item>
    </string-array>
    <string-array name="str_arr_comment_top_right">
        <item>默认排序</item>
        <item>最新发布</item>
        <item>最多评论</item>
        <item>最有用的</item>
    </string-array>
    <string name="str_book_detail_add_to_bookshelf">追更新</string>
    <string name="str_book_detail_read">开始阅读</string>
    <string name="str_book_detail_content_default">某天，宋书航意外加入了一个仙侠中二病资深患者的交流群，里面的群友们都以‘道友’相称，群名片都是各种府主、洞主、真人、天师。连群主走失的宠物犬都称为大妖犬离家出走。整天聊的是炼丹、闯秘境、炼功经验啥的。\r\n突然有一天，潜水良久的他突然发现……群里每一个群员，竟然全部是修真者，能移山倒海、长生千年的那种！\r\n啊啊啊啊，世界观在一夜间彻底崩碎啦！</string>
    <string name="str_book_detail_hot_comment">热门书评</string>
    <string name="str_book_detail_more_comment">更多</string>
    <string name="str_book_detail_recommend_title">推荐书单</string>
    <string-array name="str_arr_book_type">
        <item>全部类型</item>
        <item>玄幻奇幻</item>
        <item>武侠仙侠</item>
        <item>都市异能</item>
        <item>历史军事</item>
        <item>游戏竞技</item>
        <item>科技灵异</item>
        <item>穿越架空</item>
        <item>豪门总裁</item>
        <item>现代言情</item>
        <item>古代言情</item>
        <item>幻想小说</item>
        <item>耽美同人</item>
    </string-array>
</resources>
