<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RankActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rank_male"
            android:layout_margin="20dp"
            android:textColor="#000000"
            android:textSize="16sp"/>
        <com.welson.reader.view.RankLayout
            android:id="@+id/rank_top100_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/rank_hot_icon"
            app:name="@string/str_rank_top_100"/>
        <com.welson.reader.view.RankLayout
            android:id="@+id/rank_haoping_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/rank_hot_icon"
            app:name="@string/str_rank_haoping"/>
        <com.welson.reader.view.RankLayout
            android:id="@+id/ranl_resou_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/rank_hot_icon"
            app:name="@string/str_rank_resou"/>
        <com.welson.reader.view.RankLayout
            android:id="@+id/qianli_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/rank_potential_icon"
            app:name="@string/str_rank_qianli"/>
        <com.welson.reader.view.RankLayout
            android:id="@+id/rank_liucun_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/rank_save_icon"
            app:name="@string/str_rank_liucun"/>
        <com.welson.reader.view.RankLayout
            android:id="@+id/rank_vip_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/rank_vip_icon"
            app:name="@string/str_rank_vip"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rank_female"
            android:layout_margin="20dp"
            android:textColor="#000000"
            android:textSize="16sp"/>
        <com.welson.reader.view.RankLayout
            android:id="@+id/rank_top100_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/rank_hot_icon"
            app:name="@string/str_rank_top_100"/>
        <com.welson.reader.view.RankLayout
            android:id="@+id/rank_haoping_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/rank_hot_icon"
            app:name="@string/str_rank_haoping"/>
        <com.welson.reader.view.RankLayout
            android:id="@+id/ranl_resou_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/rank_hot_icon"
            app:name="@string/str_rank_resou"/>
        <com.welson.reader.view.RankLayout
            android:id="@+id/qianli_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/rank_potential_icon"
            app:name="@string/str_rank_qianli"/>
        <com.welson.reader.view.RankLayout
            android:id="@+id/rank_liucun_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/rank_save_icon"
            app:name="@string/str_rank_liucun"/>
        <com.welson.reader.view.RankLayout
            android:id="@+id/rank_vip_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/rank_vip_icon"
            app:name="@string/str_rank_vip"/>
    </LinearLayout>
</ScrollView>