<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/gender_close_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gender_close_icon"
        android:layout_alignParentEnd="true"/>
    <ImageView
        android:id="@+id/gender_image"
        android:layout_below="@id/gender_close_image"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:src="@drawable/ic_gender_logo"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/gender_tip1"
        android:layout_below="@id/gender_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_gender_tip1"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/gender_tip2"
        android:layout_below="@id/gender_tip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_gender_tip2"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/gender_tip3"
        android:layout_below="@id/gender_tip2"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_gender_tip3"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_below="@id/gender_tip3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/gender_male_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/gender_male_background"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_vertical"
            android:text="@string/str_gender_male_button"/>
        <Button
            android:id="@+id/gender_female_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/gender_female_background"
            android:textColor="#FFFFFF"
            android:text="@string/str_gender_female_button"/>
    </LinearLayout>
</RelativeLayout>