<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/str_community_title"/>
    <RelativeLayout
        android:id="@+id/community_discuss_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/discover_item_background"
        android:clickable="true">
        <ImageView
            android:id="@+id/community_discuss_item_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/discuss_section"/>
        <TextView
            android:id="@+id/community_discuss_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_community_discuss"
            android:textSize="16sp"
            android:layout_toEndOf="@id/community_discuss_item_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:textColor="#000000"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"
        android:layout_marginStart="70dp"/>
    <RelativeLayout
        android:id="@+id/community_comment_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/discover_item_background"
        android:clickable="true">
        <ImageView
            android:id="@+id/community_comment_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/comment_section"/>
        <TextView
            android:id="@+id/community_comment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_community_comment"
            android:textSize="16sp"
            android:layout_toEndOf="@id/community_comment_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:textColor="#000000"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"
        android:layout_marginStart="70dp"/>
    <RelativeLayout
        android:id="@+id/community_helper_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/discover_item_background"
        android:clickable="true">
        <ImageView
            android:id="@+id/community_helper_item_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/helper_section"/>
        <TextView
            android:id="@+id/community_helper_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_community_helper"
            android:textSize="16sp"
            android:layout_toEndOf="@id/community_helper_item_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:textColor="#000000"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"
        android:layout_marginStart="70dp"/>
    <RelativeLayout
        android:id="@+id/community_girl_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/discover_item_background"
        android:clickable="true">
        <ImageView
            android:id="@+id/community_girl_item_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/girl_section"/>
        <TextView
            android:id="@+id/community_girl_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_community_girl"
            android:textSize="16sp"
            android:layout_toEndOf="@id/community_girl_item_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:textColor="#000000"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"
        android:layout_marginStart="70dp"/>
    <RelativeLayout
        android:id="@+id/community_original_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/discover_item_background"
        android:clickable="true">
        <ImageView
            android:id="@+id/community_original_item_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/yuanchuang"/>
        <TextView
            android:id="@+id/community_original_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_community_original"
            android:textSize="16sp"
            android:layout_toEndOf="@id/community_original_item_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:textColor="#000000"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"
        android:layout_marginStart="70dp"/>
</LinearLayout>