<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <RelativeLayout
        android:id="@+id/discover_rank_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/discover_item_background"
        android:clickable="true">
        <ImageView
            android:id="@+id/discover_rank_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/home_find_rank"/>
        <TextView
            android:id="@+id/discover_rank_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_discover_rank"
            android:textSize="16sp"
            android:layout_toEndOf="@id/discover_rank_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:textColor="#000000"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/discover_item_enter_icon"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"
        android:layout_marginStart="70dp"/>
    <RelativeLayout
        android:id="@+id/discover_book_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/discover_item_background"
        android:clickable="true">
        <ImageView
            android:id="@+id/discover_book_list_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/home_find_topic"/>
        <TextView
            android:id="@+id/discover_book_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_discover_theme_book_list"
            android:textSize="16sp"
            android:layout_toEndOf="@id/discover_book_list_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:textColor="#000000"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/discover_item_enter_icon"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"
        android:layout_marginStart="70dp"/>
    <RelativeLayout
        android:id="@+id/discover_category_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/discover_item_background"
        android:clickable="true">
        <ImageView
            android:id="@+id/discover_category_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/home_find_category"/>
        <TextView
            android:id="@+id/discover_category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_discover_catogory"
            android:textSize="16sp"
            android:layout_toEndOf="@id/discover_category_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:textColor="#000000"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/discover_item_enter_icon"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"
        android:layout_marginStart="70dp"/>
    <RelativeLayout
        android:id="@+id/discover_audio_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/discover_item_background"
        android:clickable="true">
        <ImageView
            android:id="@+id/discover_audio_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/home_find_listen"/>
        <TextView
            android:id="@+id/discover_audio_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_discover_audio_book"
            android:textSize="16sp"
            android:layout_toEndOf="@id/discover_audio_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:textColor="#000000"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/discover_item_enter_icon"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"
        android:layout_marginStart="70dp"/>
</LinearLayout>