<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BookReviewActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMain"/>
    <LinearLayout
        android:layout_below="@id/toolbar"
        android:id="@+id/book_review_top_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorMain"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/book_review_top_left"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/community_top_background"
            android:clickable="true">
            <TextView
                android:id="@+id/book_review_top_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_comment_top_left_title"
                android:textColor="#FFFFFF"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/book_review_top_left_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/community_top_indicator_down" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/book_review_top_middle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/community_top_background"
            android:clickable="true">
            <TextView
                android:id="@+id/book_review_top_middle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_comment_top_middle_title"
                android:textColor="#FFFFFF"
                android:textSize="15sp"/>
            <ImageView
                android:id="@+id/book_review_top_middle_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/community_top_indicator_down"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/book_review_top_right"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/community_top_background"
            android:clickable="true">
            <TextView
                android:id="@+id/book_review_top_right_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_comment_top_right_title"
                android:textColor="#FFFFFF"
                android:textSize="15sp"/>
            <ImageView
                android:id="@+id/book_review_top_right_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/community_top_indicator_down"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_below="@id/book_review_top_layout"
        android:id="@+id/comment_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/book_review_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>